@@ -11924,4 +11924,14 @@ P 380 22 5.8013958732285417e-02 2.7385983767221966e-02 2.0152939904897688e-01 2.
 P 381 22 2.0790203171242877e-01 -2.4871351459758224e-02 2.0822295606861682e-01 2.9529415562713685e-01 0 1 0 0 0 0
 V -133 0 6.1741413436679693e-01 3.2178268762089854e+00 6.5691918654611170e-01 3.3954011914142410e+00 0 1 0
 P 382 130 9.9574334720186219e-01 3.5059459680657041e+00 8.3593777289700244e-01 3.7722180919916251e+00 4.9767000000000000e-01 1 0 0 0 0
+E 39 4 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 133 1 2 0 0
+U GEV MM
+C 1.2060000000000000e-01 1.0000000000000000e-02
+F1 0 0 0 0 0 0 0
+E 321 -1 -1.0 -1.0 -1.0 0 0 0 0 0 0 1 1.0
+N 1 "0"
+U GEV MM
+C 1.4347291803278606e+00 9.5861875635604679e-02 
+H 0 0 0 0 0 0 0 0 0 0 0 0 0
+F 0 0 0 0 0 0 0
 HepMC::IO_GenEvent-END_EVENT_LISTING
