@@ -70,4 +70,4 @@ Processing Event Number 10 its # 39
  pizero mass: 0.13498 GEV
  Momenutm units:     MEV     Position units:      MM
  pizero mass: 134.98 MEV
-10 valid events processed.  5 invalid events processed. Finished.
+10 valid events processed.  7 invalid events processed. Finished.
